--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://harify-com.github.io/blog-harify/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 theme = 'ananke'
