--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = 'https://blog.harify.com/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
-theme = 'ananke'
+theme = 'mini'
 enableRobotsTXT = true
